--- a/SprawlingLearningApplication/src/main/resources/application.properties
+++ b/SprawlingLearningApplication/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/SalesDB
 spring.datasource.username=postgres
-#spring.datasource.password=
+spring.datasource.password=timurka123
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
